--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://code.jquery.com/jquery-3.5.0.min.js"
+      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
@@ -34,7 +39,7 @@
       </p>
       <a
         class="btn btn-secondary btn-lg fa fa-magic startbtn"
-        href="survey.html"
+        href="/survey"
         role="button"
       >
         Let's get started!</a
