changed the survey questions

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,7 +21,7 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
   </head>
-  <body>
+  <body style="background-color: bisque;">
     <div class="container">
       <h2>Survey Questions</h2>
       <hr />
@@ -32,127 +32,123 @@
       <input type="text" id="photo" class="form-control" required />
       <hr />
       <h3><strong>Question 1</strong></h3>
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>Do you like cats?</h4>
       <select class="chosen-select" id="q1">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 2</strong></h3>
       <h4>
-        Generally speaking, you rely more on your experience than your
-        imagination.
+        Do you have a sense of humor?
       </h4>
       <select class="chosen-select" id="q2">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 3</strong></h3>
       <h4>
-        You find it easy to stay relaxed and focused even when there is some
-        pressure.
+        Do you like to travel?
       </h4>
       <select class="chosen-select" id="q3">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 4</strong></h3>
-      <h4>You rarely do something just out of sheer curiosity.</h4>
+      <h4>How much do you like coffee?</h4>
       <select class="chosen-select" id="q4">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 5</strong></h3>
-      <h4>People can rarely upset you.</h4>
+      <h4>Do you like to crochet?</h4>
       <select class="chosen-select" id="q5">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 6</strong></h3>
       <h4>
-        It is often difficult for you to relate to other people’s feelings.
+        Do you like cheeseburgers?
       </h4>
       <select class="chosen-select" id="q6">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 7</strong></h3>
       <h4>
-        In a discussion, truth should be more important than people’s
-        sensitivities.
+        Do you watch reality TV?
       </h4>
       <select class="chosen-select" id="q7">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 8</strong></h3>
-      <h4>You rarely get carried away by fantasies and ideas.</h4>
+      <h4>Do you like puzzles?</h4>
       <select class="chosen-select" id="q8">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 9</strong></h3>
       <h4>
-        You think that everyone’s views should be respected regardless of
-        whether they are supported by facts or not.
+        Do you like Lucha Libre?
       </h4>
       <select class="chosen-select" id="q9">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <h3><strong>Question 10</strong></h3>
       <h4>
-        You feel more energetic after spending time with a group of people.
+        Do you wear tye-dye?
       </h4>
       <select class="chosen-select" id="q10">
         <option value=""></option>
-        <option value="1">1 (Strongly Disagree)</option>
+        <option value="1">1 (Nope, not at all)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
+        <option value="5">5 (Absolutely!)</option>
       </select>
       <br />
       <br />
       <!-- Submit Button -->
       <button
         type="submit"
-        class="btn btn-primary btn-lg btn-block"
+        class="btn btn-secondary btn-lg fa fa-user"
         id="submit"
       >
         <i class="fa fa-check-circle" aria-hidden="true"></i> Submit
@@ -161,8 +157,12 @@
       <footer class="footer">
         <div class="container">
           <p>
-            <a href="/api/friends">API Friends List</a> |
-            <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+            <a style="color: gray;" href="/api/friends">API Friends List</a> |
+            <a
+              style="color: gray;"
+              href="https://github.com/bianca4slc/FriendFinder"
+              >GitHub Repo</a
+            >
           </p>
         </div>
       </footer>
