--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -151,7 +151,7 @@
         class="btn btn-secondary btn-lg fa fa-user"
         id="submit"
       >
-        <i class="fa fa-check-circle" aria-hidden="true"></i> Submit
+        <i aria-hidden="true"></i> Show me my new BFF!
       </button>
       <hr />
       <footer class="footer">
